--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -1,8 +1,8 @@
 body {
-  border: 0px;
+  padding: 0;
+  margin: 0;
   font-size: clamp(10px, 4vw, 17px);
   background-color: #070e29;
   color: white;
   font-family: Poppins, sans-serif;
-  min-width: 400px;
 }
