--- a/portfolio/src/Components/Proyectos/styles.module.css
+++ b/portfolio/src/Components/Proyectos/styles.module.css
@@ -40,14 +40,13 @@
   border-radius: 20px;
   perspective: 1000px;
   margin-bottom: 40px;
+  width: 100%;
 }
 .cards {
   height: 100%;
   width: 80%;
   margin-left: 10%;
   margin-right: 10%;
-  background-color: black;
-  box-shadow: 1px 1px 10px 2px #008080;
   border-radius: 20px;
   position: relative;
   transform-style: preserve-3d;
@@ -59,6 +58,9 @@
   width: 100%;
   backface-visibility: hidden;
   position: absolute;
+  border-radius: 20px;
+  background-color: black;
+  box-shadow: 1px 1px 10px 2px #008080;
 }
 .page2 {
   transform: rotateY(180deg);
@@ -67,6 +69,9 @@
   height: 100%;
   width: 100%;
   padding: 10px;
+  background-color: black;
+  border-radius: 20px;
+  box-shadow: 1px 1px 10px 2px #008080;
 }
 .cajaProyectos:hover .cards {
   transform: rotateY(180deg);
@@ -74,15 +79,28 @@
 
 .liteyoutubefallback {
   display: flex;
-  height: 300px;
+  height: 250px;
   border-radius: 20px;
-  padding: 15px;
+  padding: 10px;
+  background-color: black;
+  margin-bottom: 20px;
   color: #008080;
+  box-shadow: 1px 1px 10px 2px #008080;
 }
+
 .liteyoutubefallback:hover {
   box-shadow: 1px 1px 20px 2px #008080;
 }
-
+.groups {
+  border-radius: 20px;
+  border: 1px solid #008080;
+  margin-top: 50px;
+  width: 90%;
+  margin-left: 5%;
+  margin-right: 5%;
+  padding-bottom: 50px;
+  box-shadow: 1px 1px 5px 1px #008080;
+}
 .tituloProyectos {
   background-color: black;
   color: white;
@@ -103,7 +121,7 @@
 }
 
 .imagenProyectos {
-  width: 90%;
+  width: 100%;
   height: 250px;
   padding: 15px;
 }
@@ -173,7 +191,11 @@
   .titulo {
     font-size: 10vw;
   }
-
+  .cards {
+    width: 70%;
+    margin: 5%;
+    height: 80%;
+  }
   .tituloProyectos {
     height: 10vw;
     font-size: 5vw;
