--- a/portfolio/src/Components/Tecnologias/styles.module.css
+++ b/portfolio/src/Components/Tecnologias/styles.module.css
@@ -45,6 +45,7 @@
   width: 90%;
   margin-left: 5%;
   margin-right: 5%;
+  margin-top: 50px;
   background-color: #008080;
   display: flex;
   color: white;
