--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -2,9 +2,8 @@ body {
   padding: 0;
   margin: 0;
   font-size: clamp(10px, 4vw, 17px);
-  background-image: url("../public//background.jpeg");
-  background-size: cover;
-  background-repeat: no-repeat;
+  background-image: url("../public//background.webp");
+  background-size: 100vw 100vh;
   background-position: center;
   background-attachment: fixed;
   color: white;
