--- a/portfolio/src/Components/Header/styles.module.css
+++ b/portfolio/src/Components/Header/styles.module.css
@@ -26,7 +26,7 @@
 .Option {
   border: 0.1em;
   padding: 1.1vw;
-  color: #070e29;
+  color: transparent;
   float: left;
   text-decoration: none;
 }
